--- a/index.html
+++ b/index.html
@@ -15,5 +15,20 @@
             <div><button>accueil</button><button>a propos</button><button>coworking</button><button>codingschool</button><button>agenda</button><button>formation</button><button>presse</button><button>tester le coworking</button></div>
         </div>
     </nav>
+    <!-- div>h1{MolenGeek} -->
+    <div>
+        <h1>MolenGeek</h1>
+    </div>
+    <!-- div>(p+ul>li*5) -->
+    <div>
+        <p>Ala base molengeek est un evenement </p>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
 </body>
 </html>
