paragraphe de la premiere section

--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
     <div>
         <h1>MolenGeek</h1>
     </div>
-    <!-- div>(p+ul>li*5) -->
+    <!-- div>(p+ul>li*7) -->
     <div>
-        <p>Ala base molengeek est un evenement </p>
+        <p>Ala base molengeek est un evenement qui se passe en week-end ou en semaine pour tester une idée ou un projet entreprenarial Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, hic!</p>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, accusantium?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, non!</li>
+            <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint totam autem optio labore, numquam est.</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo modi obcaecati esse.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. A.</li>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur, non? Fuga!</li>
         </ul>
     </div>
 </body>
