--- a/index.html
+++ b/index.html
@@ -32,5 +32,14 @@
             <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur, non? Fuga!</li>
         </ul>
     </div>
+    <!-- section>div>(h3{Ou se situe molengeek dans l'eco systeme belge})+div>p -->
+    <section>
+        <div>
+            <h3>Ou se situe molengeek dans l'eco systeme belge</h3>
+            <div>
+                <p>lorem*10</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
