--- a/index.html
+++ b/index.html
@@ -37,9 +37,24 @@
         <div>
             <h3>Ou se situe molengeek dans l'eco systeme belge</h3>
             <div>
-                <p>lorem*10</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa laboriosam voluptatum maxime voluptatem expedita cum, repudiandae quo est. Maiores repellat esse asperiores cumque illo aliquid tempora neque quam corrupti debitis!
+                Pariatur minima ut hic delectus ipsum facere eveniet perspiciatis quasi, quidem omnis possimus in voluptatum facilis maxime culpa dignissimos adipisci rem dicta iusto quas dolore reiciendis laboriosam voluptates. <br> <br> Mollitia, harum.
+                Repellendus, possimus laboriosam? Eligendi excepturi itaque commodi dolore. Et totam eaque minima neque sit laudantium temporibus dolores dolor mollitia maiores, facilis, natus quia id asperiores. <br> <br> Impedit assumenda sunt molestiae enim!
+                Dolores accusantium non rerum pariatur nulla eligendi enim nihil amet fugit repudiandae minima fugiat mollitia aspernatur est dolore, atque, rem et illum neque! Quos delectus est animi magni minus illo?
+                Maiores expedita, soluta in est velit molestias ut quod natus qui eum temporibus hic similique, aliquid quibusdam? Totam suscipit non sunt, id incidunt eius dolorum, minus magnam ex consectetur quae.</p>
             </div>
         </div>
     </section>
+    <!-- ftr>div>(a*3)+div(img)+div>(p) -->
+    <footer>
+        <div>
+            <a href=""></a><a href=""></a><a href=""></a>
+            <div></div>
+            <img src="" alt="">
+            <div>
+                <p></p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
