--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- ftr>div>(a*3)+div(img)+div>(p) -->
     <footer>
         <div>
-            <a href=""></a><a href=""></a><a href=""></a>
+            <a href="">facebook</a><a href="">twitter</a><a href="">instagram</a>
             <div></div>
             <img src="" alt="">
             <div>
