--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <div>
             <p>restez dans nos evenements</p>
-            <input type="text" name="" id=""><button></button>
+            <input type="text" name="" id=""><button>inscrivez-vous</button>
             <div><button>accueil</button><button>a propos</button><button>coworking</button><button>codingschool</button><button>agenda</button><button>formation</button><button>presse</button><button>tester le coworking</button></div>
         </div>
     </nav>
@@ -48,11 +48,11 @@
     <!-- ftr>div>(a*3)+div(img)+div>(p) -->
     <footer>
         <div>
-            <a href="">facebook</a><a href="">twitter</a><a href="">instagram</a>
+            <a href="">facebook</a> <a href="">twitter</a> <a href="">instagram</a>
             <div></div>
             <img src="" alt="">
             <div>
-                <p></p>
+                <p>copyright by.....</p>
             </div>
         </div>
     </footer>
