--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <div class="titre">
         <h1>MolenGeek</h1>
     </div>
+    <hr width="50px" color="purple">
     <!-- div>(p+ul>li*7) -->
     <div>
         <div class="para">
@@ -66,9 +67,9 @@
     <!-- section>div>(h3{Ou se situe molengeek dans l'eco systeme belge})+div>p -->
     <section class="section">
         <div>
-            <h1 class="titre2">Ou se situe molengeek dans l'eco systeme tech belge</h1>
+            <h1 class="titre2">Ou se situe molengeek dans l'eco systeme tech belge:</h1>
             <div>
-                <p class="para2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa laboriosam voluptatum maxime
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa laboriosam voluptatum maxime
                     voluptatem expedita cum, repudiandae quo est. Maiores repellat esse asperiores cumque illo aliquid
                     tempora neque quam corrupti debitis!
                     Pariatur minima ut hic delectus ipsum facere eveniet perspiciatis quasi, quidem omnis possimus in
@@ -88,13 +89,15 @@
     </section>
     <!-- ftr>div>(a*3)+div(img)+div>(p) -->
     <footer>
-        <div>
+        <div class="reseaux">
             <a href="">facebook</a> <a href="">twitter</a> <a href="">instagram</a>
-            <div></div>
-            <img src="" alt="">
-            <div>
-                <p>copyright by.....</p>
-            </div>
+        </div>
+        <div>
+            <img class="img3" src="./img/unknown (2).png" width="200px" alt="">
+        </div>    
+        <div>
+            <p>copyright by.....</p>
+        </div>
         </div>
     </footer>
 </body>
