--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div>
             <img class="img3" src="./img/unknown (2).png" width="200px" alt="">
         </div>    
-        <div>
+        <div class="copy">
             <p>copyright by.....</p>
         </div>
         </div>
